Particles Lattice deform fails in Blender 2.8 #59484

Closed
opened 2018-12-17 10:51:01 +01:00 by William Reynish · 5 comments

System Information
Operating system: macOS 10.14.2 (18C54)
Graphics card: AMD Radeon R9 M395X 4096 MB

Blender Version
Broken: 2.80 beta Dec 17.
Worked: 2.79

Short description of error
The particles lattice deform feature has no effect in 2.8

Exact steps for others to reproduce the error

  • Add a particle system to your object
  • Add a Lattice object
  • Parent the object to your lattice and select Lattice Deform
  • The particles are not deformed by said lattice.

This .blend file can be opened in 2.79
particle_lattice.blend

When opened in 2.79, you'll see the particles follow the lattice:

Screenshot 2018-12-17 at 10.44.00.png

The same file in 2.80 beta (Dec 17 2018) shows the lattice having no effect:

Screenshot 2018-12-17 at 10.44.31.png

**System Information** Operating system: macOS 10.14.2 (18C54) Graphics card: AMD Radeon R9 M395X 4096 MB **Blender Version** Broken: 2.80 beta Dec 17. Worked: 2.79 **Short description of error** The particles lattice deform feature has no effect in 2.8 **Exact steps for others to reproduce the error** - Add a particle system to your object - Add a Lattice object - Parent the object to your lattice and select Lattice Deform - The particles are not deformed by said lattice. This .blend file can be opened in 2.79 [particle_lattice.blend](https://archive.blender.org/developer/F5979056/particle_lattice.blend) When opened in 2.79, you'll see the particles follow the lattice: ![Screenshot 2018-12-17 at 10.44.00.png](https://archive.blender.org/developer/F5979062/Screenshot_2018-12-17_at_10.44.00.png) The same file in 2.80 beta (Dec 17 2018) shows the lattice having no effect: ![Screenshot 2018-12-17 at 10.44.31.png](https://archive.blender.org/developer/F5979067/Screenshot_2018-12-17_at_10.44.31.png)

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2018-12-17 11:06:26 +01:00
Member

Confirmed, checking...

Confirmed, checking...

This issue was referenced by 8e08e323a7

This issue was referenced by 8e08e323a7cf302b59e90077594caef7db725c57
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59484
No description provided.